[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scenes/UI/Upgrader.gd" type="Script" id=1]

[node name="Upgrader" type="Control"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
margin_right = 90.0
margin_bottom = 80.0
rect_min_size = Vector2( 90, 80 )
rect_scale = Vector2( 2, 2 )

[node name="UpgradeBar" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -45.0
margin_right = 45.0
margin_bottom = 80.0
custom_constants/separation = 10

[connection signal="mouse_entered" from="UI/HUD" to="." method="_on_HUD_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD" to="." method="_on_HUD_mouse_exited"]
